tests/invalid/dot_path.m
% No expr in parens
a.(a + b);

%%%%%%%%%%

% Can only call identifiers
(a + b)(c);
